Update: Add dashboard functionality and DTOs